change about page

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -7,7 +7,9 @@
 <body>
     {{>header}}
     <h1>ABOUT page {{title}}</h1>
-    <img src="./img/z7k_wx4u1gl4-usgjpfpbussyew.jpeg">
+    <p>weather API - metaweather.com</p>
+    <img src="./img/castle-5693094_640.jpg">
+    <p>Image by Randy Jost from Pixabay </p>
     {{>footer}}
 </body>
 </html>
